--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,52 @@
 <%= stylesheet_link_tag "home" %>
-<h1>Welcome User</h1>
-<div>
-<%= form_tag(:controller => "audit", :action => "create", :method => "get") do %>
-  <% #label_tag("Enter Name")   %>
-  <% #text_field_tag(:name) %>
-  <br/>
-  <%= label_tag("Pick City") %>
-  <!-- Here you will pull from the city table -->
-  <%=  select_tag(:city,options_from_collection_for_select(City.all, :id, :city)) %>
-  <br/>
-  <%  #label_tag("No of lights you own")%>
-  <% #text_field_tag(:no_of_lights)   %>
-  <br/>
-  <%= label_tag("Type of Light") %>
-  <% # select_tag(:legacylight_id, options_from_collection_for_select([1,"test"])) %>
-  <%=  select_tag(:light, options_from_collection_for_select(Legacylight.all, :id, :name)) %>
-  <br/>
-  <%= submit_tag("Enter")   %>
-<% end %>
 
+<h1 id="hey">Welcome User</h1>
+<div>
+  <%= form_tag(:controller => "npvcalc", :action => "create", :method => "get") do %>
+    <br/>
+    <%= label_tag("Pick City") %>
+    <!-- Here you will pull from the city table -->
+    <%=  select_tag(:city,options_from_collection_for_select(City.all, :id, :city)) %>
+    <br/>
+    <h2> Pick Appliances </h2>
+
+    <!-- Pick washer -->
+    <p>Washer</p>
+    <span>Brand</span><%= select_tag(:wash_b, options_for_select(@washer_brand)) %>
+    <span>Model</span><%= select_tag(:washer_name, options_from_collection_for_select(Washer.all, :id, :model)) %>
+
+    <!-- Pick dishwasher -->
+    <p>Dishwasher</p>
+    <span>Brand</span><%= select_tag(:brand_dw, options_for_select(@brand_dw)) %>
+    <span>Model</span><%= select_tag(:name_dw, options_from_collection_for_select(Washer.all, :id, :model)) %>
+
+    <!-- Pick refrigarator -->
+    <p>Refrigarator</p>
+    <span>Brand</span><%= select_tag(:brand_rfg, options_for_select(@brand_rfg)) %>
+    <span>Model</span><%= select_tag(:name_rfg, options_from_collection_for_select(Washer.all, :id, :model)) %>
+    
+    <%= submit_tag("Enter") %>
+  <% end %>
 </div>
+<script>
+
+  // Getting washer models based on brand name
+  $(document).ready(function(){
+    $("#wash_b").change(function(){
+      $.ajax({
+        type : 'GET',
+        url : 'home/brand_name?f='+$("#wash_b").val(),
+        success : function(response) {
+          $("#washer_name").html(response);
+        },
+        error:function (xhr, ajaxOptions, thrownError){
+          console.log("oops");
+        }
+      });
+    });
+  });
+
+  // Getting washingmachine models based on brand name
+
+
+</script>
