--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Energyapp</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <%= csrf_meta_tag %>
 </head>
 <body>
