--- a/app/views/npvcalc/create.html.erb
+++ b/app/views/npvcalc/create.html.erb
@@ -5,3 +5,10 @@
 
 <%=    @optimized_washer_deltas  %>
 <%=    @optimized_washer_savings %>
+
+
+<h2>Fridge</h2>
+<%= @opt_fridges %>
+
+<h3>Dishwashers</h3>
+<%= @opt_dws %>
