--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -5,27 +5,38 @@ body{
 	color:#fff;
 }
 
-div.container {
-	margin:0;
-	padding:0;
+div.apps {
+	width: 900px;
+	margin:0 auto;
+	padding:10px;
+	border: 1px solid #cccccc;
+	font-family: MuseoSlab100;
 }
 
-div.container h1 {
+h1,h2 {
 	font-family: MuseoSlab700;
 }
 
-div.container input, div.container select {
+div.apps input, div.apps select {
 	border: 1px solid #A2A7A7;
 	margin: 10px;
 	padding: 4px;
 	width: 300px;
+	font-family: MuseoSlab100;
 }
+
+div.apps input[type=submit] {
+	border: 1px solid #A2A7A7;
+	margin: 10px;
+	padding: 4px;
+	width: 50px;
+}
+
 
 label {
 	font-family: MuseoSlab100;
 	width: 300px;
 	float: left;
-	padding: 10px;
 	clear: both
 }
 
